<resources>
    <string name="app_name">Crowdsourcing</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="login_button">Login</string>
    <string name="ID">ID</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="you_are">you\'re a(an)...?</string>
    <string name="Supporter">Supporter</string>
    <string name="Artist">Artist</string>
    <string name="donation_head">Donation History</string>
    <string name="donate">Donate</string>
    <string name="add_comment">Add a comment...</string>
    <string name="seeall">See all</string>
    <string name="login_state">Login</string>
    <string name="Welcome_back">Welcome Back</string>
    <string name="Donate_user">User</string>
    <string name="example_Baht">999 Baht</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="credit_card_num">Credit card number</string>
    <string name="month_year">mm/yy</string>
    <string name="CVV">CVV</string>
    <string name="pop_credit_head">Fill your credit card</string>
    <string name="name">Name</string>
    <string name="go_back_home">Go Back to Home</string>
    <string name="pay_success">Payment Successful</string>
    <string name="remain_text">Remaining Support</string>
    <string name="trans_suc">Transaction Successful</string>
    <string name="how_much">How much do you want to transfer?</string>
    <string name="current">Current balance</string>
    <string name="Username">Username</string>
    <string name="email">Email</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="set_new_pass">Set New Password</string>
    <string name="update">Update</string>
    <string name="status">Status</string>
    <string name="money">20000</string>
    <string name="following">Following</string>
    <string name="back_to_login">Back to Login</string>
    <string name="login_success">Login Successfully !!</string>
    <string name="please_fill_pass">*Password must be at least 6 characters</string>
    <string name="search">Search</string>
    <string name="new_post">New Post</string>
    <string name="post">Post</string>
    <string name="add_phpto">Add Photo</string>
    <string name="caption">Caption</string>
    <string name="transac_head">Transaction History</string>
    <string name="confirm_update">Are you sure to update ? </string>
    <string name="profile">Profile</string>
    <string name="total_support">Total Support</string>
    <string name="transfer">Transfer</string>
    <string name="fill_email">Please fill in your Email</string>
    <string name="fill_pass">Please fill in your password</string>
    <string name="fill_all">Please fill all input</string>
    <string name="fill_pic">Please select your picture</string>
    <string name="pass_contain">Your password should contain at least 6 characters</string>
    <string name="pass_not_match">Your new password does not match</string>
    <string name="authen_fail">Authentication failed</string>
    <string name="log_out">Logging out</string>
    <string name="back_exit">Please click BACK again to exit</string>
    <string name="amount_in">Please input the amount</string>
    <string name="broke">You are broke</string>
    <string name="navlog_out">Log out</string>
    <string name="delete">Delete user</string>
    <string name="select_type">Please select your role</string>
    <string name="over">Your balance is not enough</string>


</resources>
