<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/pop_credit_head"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintTop_toTopOf="@+id/editText">

            <EditText
                android:id="@+id/fill_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:background="@drawable/border_text"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/editText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:background="@drawable/border_text"
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:ems="10"
                android:hint="@string/credit_card_num"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                app:layout_constraintBottom_toTopOf="@+id/editText3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fill_name" />

            <EditText
                android:background="@drawable/border_text"
                android:id="@+id/editText2"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/month_year"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:background="@drawable/border_text"
                android:id="@+id/editText3"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/CVV"
                android:inputType="textPersonName"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/back_donate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingLeft="25dp"
                    android:paddingTop="5dp"
                    android:paddingRight="25dp"
                    android:paddingBottom="5dp"
                    android:text="@string/back"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/confirm_donate"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingLeft="25dp"
                    android:paddingTop="5dp"
                    android:paddingRight="25dp"
                    android:paddingBottom="5dp"
                    android:text="@string/confirm"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>