<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="50dp"
                android:paddingBottom="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:paddingTop="70dp"
                    android:gravity="center"
                    android:text="@string/login_state"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="#202135"/>


                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="20dp"
                    android:text="@string/Welcome_back"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/login_id"
                    android:layout_width="322dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/background_light"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textPersonName"
                    android:padding="15dp" />

                <EditText
                    android:id="@+id/login_pass"
                    android:layout_width="322dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="20dp"
                    android:background="@android:color/background_light"
                    android:ems="10"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:padding="15dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="414dp"
                        android:layout_height="347dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.666"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_login" />

                    <TextView
                        android:id="@+id/login_login"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/button"
                        android:gravity="center_horizontal|center_vertical"
                        android:padding="10dp"
                        android:text="@string/login_button"
                        android:textColor="#FFFFFF"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_percent="0.15"
                        app:layout_constraintHorizontal_bias="0.496"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.6" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>