<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202135">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/new_post"
                android:textColor="#f0f0f0"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:paddingRight="10dp"
                android:text="@string/post"
                android:textColor="#00DBD9"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="#ffffff"
            android:orientation="horizontal"
            >

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/newpost_profile"
                android:layout_width="58dp"
                android:layout_height="51dp"
                android:layout_margin="8dp"
                app:civ_border_color="#3f51b5"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/user_display_content"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/background_add_image" />

            <TextView
                android:id="@+id/new_post_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/Username"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/caption"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:background="#ffffff"
            android:gravity="start|top"
            android:hint="@string/caption"
            android:inputType="textMultiLine"
            android:maxEms="15"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/background_add_image" />

        <LinearLayout
            android:id="@+id/add_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                app:srcCompat="@drawable/ic_add_image_blue" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"

                android:text="@string/add_phpto" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>