<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="308dp"
            android:layout_gravity="center"
            android:background="#202135"
            android:padding="10dp"
            app:layout_constraintHeight_percent="0.5">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/img_pick_btn"
                android:layout_width="155dp"
                android:layout_height="145dp"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="10dp"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toTopOf="@+id/textView15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/pic" />

            <ImageView
                android:id="@+id/edit_profile"
                android:layout_width="145dp"
                android:layout_height="145dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.803"
                app:srcCompat="@drawable/half_circle" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.654"
                app:srcCompat="@drawable/ic_add_image" />

            <TextView
                android:id="@+id/prof_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/profile"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/edit_name"
                android:layout_width="29dp"
                android:layout_height="26dp"
                android:layout_marginEnd="104dp"
                android:layout_marginRight="104dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.936"
                app:srcCompat="@drawable/ic_edit" />

            <EditText
                android:id="@+id/username_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="#202135"
                android:gravity="center"
                android:text="@string/Username"
                android:textColor="#ffffff"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.316"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prof_head"
                app:layout_constraintVertical_bias="0.943" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="-4dp"
            tools:layout_editor_absoluteY="-74dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:gravity="left"
                        android:paddingLeft="50dp"
                        android:text="@string/set_new_pass"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="@string/set_new_pass" />

                    <EditText
                        android:id="@+id/old_pass"
                        android:layout_width="322dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/background_light"
                        android:ems="10"
                        android:hint="@string/old_pass"
                        android:inputType="textPersonName"
                        android:padding="15dp" />

                    <EditText
                        android:id="@+id/new_password"
                        android:layout_width="322dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:background="@android:color/background_light"
                        android:ems="10"
                        android:hint="@string/new_pass"
                        android:inputType="textPassword"
                        android:padding="15dp" />

                    <EditText
                        android:id="@+id/confirm_pass"
                        android:layout_width="322dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:background="@android:color/background_light"
                        android:ems="10"
                        android:hint="@string/Confirm_Password"
                        android:inputType="textPassword"
                        android:padding="15dp" />

                    <TextView
                        android:id="@+id/dash"
                        android:layout_width="36dp"
                        android:layout_height="3dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="#000000"
                        app:layout_constraintHeight_percent="0.005"
                        app:layout_constraintWidth_percent="0.1" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/update"
                        android:layout_width="270dp"
                        android:layout_height="54dp"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:background="@drawable/button"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/update"
                        android:textColor="#FFFFFF"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.175"
                        tools:text="@string/update" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>